fix: Overflowing page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,3 +42,7 @@
 @import "./panels";
 @import "./select";
 @import "./swiper";
+
+body {
+    max-width: 100vw;
+}
